--- a/style.css
+++ b/style.css
@@ -8,10 +8,9 @@ body{
     height: 1vh;
     background-color: black;
 }
-canvas{
+#game_canvas{
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    padding: 20px;
 }
