--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@ body{
 }
 #game_canvas{
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 100px;
+    left: 50px;
     padding: 0;
     cursor: none;
 }
